Split printer module into two
Move the functions that don't depend on Cmd to a library module.
This way these functions can be used elsewhere.

Ideally the rest of the print module should also be a library, but that's
for another day

--- a/bin/dune
+++ b/bin/dune
@@ -2,7 +2,7 @@
  (public_name dlock)
  (name deadlock_detector)
  (flags (:standard -w -66 -warn-error -A))
- (modules Auxfunctions Cmd Deadlock_detector Printer)
+ (modules Auxfunctions Cmd Deadlock_detector Printer2)
  (libraries dlock))
 
 (executable
