Add alternate implementation of main_act_verifier
Also:
* Add compare function of Eta
* Add unit tests comparing to the original implementation

--- a/test/dune
+++ b/test/dune
@@ -1,3 +1,9 @@
 (test
  (name ccs_parser)
+ (modules ccs_parser)
+ (libraries dlock))
+
+(test
+ (name main_act_verifier)
+ (modules main_act_verifier)
  (libraries dlock))
