--- a/dune
+++ b/dune
@@ -1,1 +1,2 @@
 (env (_ (flags (:standard -w +a-4-6-7-9-27-29-30-32..42-44-45-48-50-60-66-67-68 -warn-error -a+31))))
+(data_only_dirs test_compare_with_orig)
