Reorganize lib code
* Move Cmd to lib/
* Move Print2 code back to Print in lib/

--- a/bin/dune
+++ b/bin/dune
@@ -1,6 +1,6 @@
 (executable
  (public_name dlock)
  (name deadlock_detector)
- (modules Cmd Deadlock_detector Printer2)
+ (modules Deadlock_detector)
  (libraries dlock)
  (modes byte))
