Rename deadlock_detector module
Now it's consistent with main_act_verifier/main_act_verifier_orig

--- a/bin/dune
+++ b/bin/dune
@@ -6,8 +6,8 @@
  (modes byte))
 
 (executable
- (public_name dlock2)
- (name deadlock_detector2)
- (modules Deadlock_detector2)
+ (public_name dlock-orig)
+ (name deadlock_detector_orig)
+ (modules Deadlock_detector_orig)
  (libraries dlock)
  (modes byte))
