--- a/bin/dune
+++ b/bin/dune
@@ -11,3 +11,10 @@
  (modules Deadlock_detector_orig)
  (libraries dlock)
  (modes byte))
+
+(executable
+ (public_name migo_parser)
+ (name MiGo_parser)
+ (modules MiGo_parser)
+ (libraries dlock)
+ (modes byte))
